tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP56ErrorReportingTests#PHP56ErrorReportingTests(String[]).mjava
	public PHP56ErrorReportingTests(String[] fileNames) {
		super(fileNames);
	}

